--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: al-folio
-blog_description: a simple whitespace theme for academics
+blog_name: my blog
+blog_description: check out some of my projects!
 
 # Pagination
 paginate: 4
@@ -58,7 +58,7 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: my blog # put your disqus shortname
 
 # Optional features
 show_social_icons:  false
