--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@
 name: Daniel Junghans
 email: danjunghans@gmail.com
 description: > # this means to ignore newlines until "url:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Daniel Junghans. Student in Eli Broad College of Business at Michigan State University pursuing Finance. 
+
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
