--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,10 @@ middle_name: D.
 last_name: Junghans
 email: danjunghans@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  My name is Daniel Junghans and I am a Financial Institution Examiner for Michigan's Department of Insurance and Financial Services. I work within the Office of Banking to protect depositors, creditors, and shareholders. I am a knowledgeable young finance professional eager to leverage my understanding of finance to generate creative solutions. 
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
