--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -61,7 +61,7 @@
       year: 2021
       description:
         - Cumulative GPA 3.81/4.00
-        - Dean's List 7 Semesters
+        - Dean's List 7/7 Semesters
 
 - title: Pulbications & Presentations
   type: list
